--- a/cours6/index.html
+++ b/cours6/index.html
@@ -261,7 +261,7 @@ Je peux écrire du texte ici.
   <article data-timings="">
     <ul>
 <li>\(\LaTeX\) est un language gratuit et OpenSource.</li>
-<li>Stable et doté d&#39;une riche communauté d&#39;utilisateur.</li>
+<li>Stable et doté d&#39;une riche communauté d&#39;utilisateurs.</li>
 <li>Stack Overflow entièrement dédié à \(\LaTeX\): <a href="https://tex.stackexchange.com/">https://tex.stackexchange.com/</a></li>
 <li>Compilateur en ligne: <a href="https://fr.sharelatex.com/">https://fr.sharelatex.com/</a></li>
 <li>Ajustement automatique du contenant au contenu</li>
@@ -294,11 +294,11 @@ Je peux écrire du texte ici.
   </hgroup>
   <article data-timings="">
     <ol>
-<li>Créer un dossier sur votre bureau qui va contenir votre document \(\LaTeX\)</li>
+<li>Créer un dossier sur le bureau qui va contenir le document \(\LaTeX\)</li>
 <li>Ouvrir Sublime Text2</li>
-<li>Sélectionner votre dossier nouvelle créer: <code>Fichier &gt; Ouvrir</code></li>
+<li>Sélectionner le dossier nouvellement créé: <code>Fichier &gt; Ouvrir</code></li>
 <li>Créer un nouveau document: <code>Fichier &gt; Nouveau</code></li>
-<li>Enregistrer votre document avec l&#39;extension <code>.tex</code>: <code>Fichier &gt; Enregistrer sous</code></li>
+<li>Enregistrer le document avec l&#39;extension <code>.tex</code>: <code>Fichier &gt; Enregistrer sous</code></li>
 </ol>
 
 <p>Et voilà, l&#39;extension <code>.tex</code> détermine que le fichier est un document \(\LaTeX\).</p>
@@ -369,8 +369,8 @@ Je peux écrire du texte ici.
     <p>Afin d&#39;obtenir le rendu PDF de notre document, nous devons compiler ce dernier à l&#39;aide du compilateur <code>pdflatex</code>.</p>
 
 <ul>
-<li><p><strong>Étape 1.</strong> Ouvrez votre terminal (touches Ctrl+Alt+t).</p></li>
-<li><p><strong>Étape 2.</strong> À l&#39;aide de la commande <code>cd</code> (<em>Change Directory</em>), vous devez vous déplacer dans le terminal vers le dossier que vous venez de créer:</p></li>
+<li><p><strong>Étape 1.</strong> Ouvrir le terminal (touches Ctrl+Alt+t).</p></li>
+<li><p><strong>Étape 2.</strong> À l&#39;aide de la commande <code>cd</code> (<em>Change Directory</em>), se déplacer dans le terminal vers le dossier qui vient d&#39;être créé:</p></li>
 </ul>
 
 <pre><code class="bash">cd ~/Bureau
@@ -390,7 +390,7 @@ Je peux écrire du texte ici.
     
     <div class='left' style='float:left;width:50%'>
      <ul>
-<li><strong>Étape 3.</strong> Vous pouvez maintenant compiler le document avec la commande:</li>
+<li><strong>Étape 3.</strong> Compiler le document avec la commande:</li>
 </ul>
 
 <pre><code class="bash">pdflatex mon_document.tex
@@ -439,7 +439,7 @@ Transcript written on doc.log.
 <li>Enfin, la balise <code>\today</code> remplie la date du jour pour nous.</li>
 </ul>
 
-<p>Note : pour une date en français, il faut utiliser le package <code>\usepackage[rench]{babel}</code></p>
+<p>Note : pour une date en français, il faut utiliser le package <code>\usepackage[french]{babel}</code></p>
 
     </div>
   </article>
@@ -451,7 +451,7 @@ Transcript written on doc.log.
   <article>
     
     <div class='left' style='float:left;width:50%'>
-     <p>La page titre est généré grâce à la balise <code>\maketitle</code> dans l&#39;environnement document.</p>
+     <p>La page titre est générée grâce à la balise <code>\maketitle</code> dans l&#39;environnement document.</p>
 
 <pre><code class="tex">[...]
 
@@ -479,7 +479,7 @@ Transcript written on doc.log.
     <h1>Exercice 3</h1>
   </hgroup>
   <article data-timings="">
-    <p>Ajoutez vos métadonnées puis compilez votre document avec la page titre.</p>
+    <p>Ajouter les métadonnées puis compiler le document avec la page titre.</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -594,8 +594,8 @@ Transcript written on doc.log.
     <h1>Exercice 4</h1>
   </hgroup>
   <article data-timings="">
-    <p>Ajoutez des sections à votre document, et construisez la table des matières.
-Prenez le temps de lire la sortie affichée par le compilateur <code>pdflatex</code>.</p>
+    <p>Ajouter des sections au document, et construir la table des matières.
+Prendre le temps de lire la sortie affichée par le compilateur <code>pdflatex</code>.</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -606,7 +606,7 @@ Prenez le temps de lire la sortie affichée par le compilateur <code>pdflatex</c
     <h1>Le fichier auxiliaire (<code>.aux</code>)</h1>
   </hgroup>
   <article data-timings="">
-    <p>Lors du dernier exercice, vous avez remarqué que la table des matières n&#39;était pas insérée dans le document.</p>
+    <p>Lors du dernier exercice, la table des matières n&#39;était pas insérée dans le document.</p>
 
 <ol>
 <li><p>La première compilation scanne le document à la recherche de références internes telles que les sections.</p>
@@ -631,7 +631,7 @@ Prenez le temps de lire la sortie affichée par le compilateur <code>pdflatex</c
   </hgroup>
   <article data-timings="">
     <div style='text-align:center;'>
-<img src="assets/img/flow_comp1.png" height="500px"></img>
+<img src="assets/img/flow_comp1.png" height="400px"></img>
 </div>
 
   </article>
@@ -819,7 +819,7 @@ ou {\large{plus grand}}.
     <h1>Interlignes</h1>
   </hgroup>
   <article data-timings="">
-    <p>Pour spécifier si le document doit être en double ou simple interlignes, il suffit d&#39;ajouter le package <code>setspace</code> et d&#39;y rattacher l&#39;option désiré.</p>
+    <p>Pour spécifier si le document doit être en double ou simple interlignes, il suffit d&#39;ajouter le package <code>setspace</code> et d&#39;y rattacher l&#39;option désirée.</p>
 
 <pre><code class="tex">\documentclass[12pt]{article}
 
@@ -862,7 +862,7 @@ OU
     <div class='right' style='float:right;width:45%'>
      <ul>
 <li><p><code>\setlength{\parskip}{2em}</code>: permet de mettre de déterminer l&#39;espace désiré entre les paragraphes.</p></li>
-<li><p>Attention, comme <code>\setlength{\parindent}{10mm}</code>, cette configuration doit être placé dans le préambule pour être appliqué sur l&#39;ensemble du document.</p></li>
+<li><p>Attention, comme <code>\setlength{\parindent}{10mm}</code>, cette configuration doit être placée dans le préambule pour être appliquée sur l&#39;ensemble du document.</p></li>
 </ul>
 
     </div>
@@ -1008,7 +1008,7 @@ Dans mon introduction (section \ref{sec:intro}), je vous ai présenté les rése
 \end{document}
 </code></pre>
 
-<p>Les numéros de sections s&#39;ajusteront automatiquement si vous ajouter ou enlever des sections.</p>
+<p>Les numéros de sections s&#39;ajusteront automatiquement si vous ajoutez ou enlevez des sections.</p>
 
 <!-- **Important:** Tout comme la table des matières, il faudra deux compilations consécutives pour visualiser les références dans le texte.
 -->
@@ -1052,9 +1052,9 @@ Vous pouvez modifier ce comportement par défaut en modifiant la balise <code>\h
     <h1>Exercice 5 (15 minutes):</h1>
   </hgroup>
   <article data-timings="">
-    <p>Essayer de produire la page titre du département de Biologie (sans utiliser les métadonnées et <code>\maketitle</code>).</p>
+    <p>Reproduire la page titre du département de Biologie (sans utiliser les métadonnées et <code>\maketitle</code>).</p>
 
-<p>Si vous désirez utiliser les métadonnées pour produire la page titre, la procédure est la suivante:</p>
+<p>Si vous désirez, utilisez les métadonnées pour produire la page titre. La procédure est la suivante:</p>
 
 <pre><code class="tex">[...]
 
@@ -1272,7 +1272,7 @@ $I(S)$ et $E(S)$ se croisent, ce qui donne pour solution \ref{eq:tib}.
   <article data-timings="">
     <p>Les références que l&#39;on va citer sont entreposer dans un fichier <code>.bib</code>.</p>
 
-<p>Le fichier doit contenir des entrées <code>bibtex</code> qui ressemble à cela:</p>
+<p>Le fichier doit contenir des entrées <code>bibtex</code> qui ressemblent à:</p>
 
 <pre><code class="tex">@article{gravel2006a,
   title={Reconciling niche and neutrality: the continuum hypothesis},
@@ -1311,7 +1311,7 @@ $I(S)$ et $E(S)$ se croisent, ce qui donne pour solution \ref{eq:tib}.
 
 <h2>Exercice 6 (suite)</h2>
 
-<p><strong>Étape 2.</strong> En vous servant de Google Scholar, remplisser votre fichier <code>mabiblio.bib</code> avec 2 entrées bibtex.</p>
+<p><strong>Étape 2.</strong> En vous servant de Google Scholar, remplissez votre fichier <code>mabiblio.bib</code> avec 2 entrées bibtex.</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -1363,7 +1363,7 @@ article \cite{gravel2006a}.
     <h1>Exercice 6 (suite)</h1>
   </hgroup>
   <article data-timings="">
-    <p><strong>Étape 3.</strong> En vous servant de votre fichier que vous venez d&#39;enregistrer (<code>mabiblio.bib</code>), citer vos deux références dans votre document à l&#39;aide de la commande <code>\cite</code>.</p>
+    <p><strong>Étape 3.</strong> En vous servant de votre fichier que vous venez d&#39;enregistrer (<code>mabiblio.bib</code>), citez vos deux références dans votre document à l&#39;aide de la commande <code>\cite</code>.</p>
 
 <pre><code class="tex">\documentclass[12pt]{article}
 
@@ -1422,7 +1422,7 @@ article \cite{gravel2006a}.
     <h1>Exercice 6 (suite)</h1>
   </hgroup>
   <article data-timings="">
-    <p><strong>Étape 4.</strong> En vous servant de votre terminal, compiler votre document \(\LaTeX\) avec vos deux citations.</p>
+    <p><strong>Étape 4.</strong> En vous servant de votre terminal, compilez votre document \(\LaTeX\) avec vos deux citations.</p>
 
 <h2>Rappel, la compilation se déroule en trois étapes:</h2>
 
@@ -1451,7 +1451,7 @@ article \cite{gravel2006a}.
     <h1>Objectif</h1>
   </hgroup>
   <article data-timings="">
-    <p>Écrire un rapport sous forme d&#39;article scientifiques</p>
+    <p>Écrire un rapport sous forme d&#39;article scientifique</p>
 
   </article>
   <!-- Presenter Notes -->
