--- a/cours5/index.html
+++ b/cours5/index.html
@@ -946,7 +946,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 31
+<pre><code>## [1] 29
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1122,7 +1122,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.2289282
+<pre><code>## [1] 0.264566
 </code></pre>
 
   </article>
@@ -1140,37 +1140,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    2    3    2    1    3    3    2     3     3     1     2
-##  [2,]    3    0    2    2    3    2    2    4    2     2     1     3     3
-##  [3,]    2    2    0    1    1    2    2    2    2     1     1     1     2
-##  [4,]    3    2    1    0    1    3    1    2    1     1     1     2     1
-##  [5,]    2    3    1    1    0    2    2    1    2     2     2     1     2
-##  [6,]    1    2    2    3    2    0    3    3    2     2     3     1     2
-##  [7,]    3    2    2    1    2    3    0    2    2     2     1     2     1
-##  [8,]    3    4    2    2    1    3    2    0    3     3     3     2     3
-##  [9,]    2    2    2    1    2    2    2    3    0     2     2     1     2
-## [10,]    3    2    1    1    2    2    2    3    2     0     2     2     2
-## [11,]    3    1    1    1    2    3    1    3    2     2     0     2     2
-## [12,]    1    3    1    2    1    1    2    2    1     2     2     0     1
-## [13,]    2    3    2    1    2    2    1    3    2     2     2     1     0
-## [14,]    2    1    2    2    3    1    3    4    1     1     2     2     3
-## [15,]    2    3    2    1    2    2    1    1    2     2     2     1     2
+##  [1,]    0    2    3    3    3    2    1    2    2     1     2     4     3
+##  [2,]    2    0    2    1    1    2    1    1    2     1     2     2     2
+##  [3,]    3    2    0    2    1    1    2    2    1     3     2     3     1
+##  [4,]    3    1    2    0    1    2    2    2    3     2     3     3     3
+##  [5,]    3    1    1    1    0    1    2    2    2     2     3     3     2
+##  [6,]    2    2    1    2    1    0    1    3    2     2     3     4     2
+##  [7,]    1    1    2    2    2    1    0    2    1     1     2     3     3
+##  [8,]    2    1    2    2    2    3    2    0    3     1     2     3     1
+##  [9,]    2    2    1    3    2    2    1    3    0     2     3     2     2
+## [10,]    1    1    3    2    2    2    1    1    2     0     1     3     2
+## [11,]    2    2    2    3    3    3    2    2    3     1     0     4     1
+## [12,]    4    2    3    3    3    4    3    3    2     3     4     0     4
+## [13,]    3    2    1    3    2    2    3    1    2     2     1     4     0
+## [14,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
+## [15,]    3    1    2    2    2    3    2    2    1     2     3     1     3
 ##       [,14] [,15]
-##  [1,]     2     2
-##  [2,]     1     3
-##  [3,]     2     2
-##  [4,]     2     1
-##  [5,]     3     2
-##  [6,]     1     2
-##  [7,]     3     1
-##  [8,]     4     1
-##  [9,]     1     2
-## [10,]     1     2
-## [11,]     2     2
-## [12,]     2     1
-## [13,]     3     2
-## [14,]     0     3
-## [15,]     3     0
+##  [1,]   Inf     3
+##  [2,]   Inf     1
+##  [3,]   Inf     2
+##  [4,]   Inf     2
+##  [5,]   Inf     2
+##  [6,]   Inf     3
+##  [7,]   Inf     2
+##  [8,]   Inf     2
+##  [9,]   Inf     1
+## [10,]   Inf     2
+## [11,]   Inf     3
+## [12,]   Inf     1
+## [13,]   Inf     3
+## [14,]     0   Inf
+## [15,]   Inf     0
 </code></pre>
 
   </article>
@@ -1187,9 +1187,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.2018334 0.1657273 0.6753393 1.0000000 0.7370619 0.3142900 0.4950886
-##  [8] 0.2523953 0.4100093 0.4108500 0.4784401 0.6712342 0.4436587 0.3307830
-## [15] 0.4953488
+<pre><code>##  [1] 0.4210088 1.0000000 0.6074646 0.3679706 0.5926931 0.5899283 0.7457741
+##  [8] 0.4506817 0.5615330 0.6554764 0.2196450 0.1549495 0.2952167 0.0000000
+## [15] 0.5157209
 </code></pre>
 
   </article>
