--- a/cours5/index.html
+++ b/cours5/index.html
@@ -946,7 +946,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 20
+<pre><code>## [1] 19
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1122,7 +1122,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.4375
+<pre><code>## [1] 0.4279779
 </code></pre>
 
   </article>
@@ -1140,37 +1140,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    4    2    1    2    3    2    1     1     1     2     2
-##  [2,]    3    0    3    3    4    2    2    5    4     2     4     3     1
-##  [3,]    4    3    0    4    5    3    1    6    5     3     5     4     2
-##  [4,]    2    3    4    0    3    2    3    4    2     1     3     1     2
-##  [5,]    1    4    5    3    0    3    4    1    2     2     2     3     3
-##  [6,]    2    2    3    2    3    0    2    4    2     1     3     1     1
-##  [7,]    3    2    1    3    4    2    0    5    4     2     4     3     1
-##  [8,]    2    5    6    4    1    4    5    0    3     3     3     4     4
-##  [9,]    1    4    5    2    2    2    4    3    0     2     1     1     3
-## [10,]    1    2    3    1    2    1    2    3    2     0     2     1     1
-## [11,]    1    4    5    3    2    3    4    3    1     2     0     2     3
-## [12,]    2    3    4    1    3    1    3    4    1     1     2     0     2
-## [13,]    2    1    2    2    3    1    1    4    3     1     3     2     0
-## [14,]    2    5    6    4    1    4    5    2    3     3     3     4     4
-## [15,]    3    6    7    5    2    5    6    1    4     4     4     5     5
+##  [1,]    0    3    3    2    2    1    2    3    5     4     3     2     4
+##  [2,]    3    0    3    1    3    2    2    3    6     2     4     3     5
+##  [3,]    3    3    0    3    3    2    1    2    6     3     4     3     5
+##  [4,]    2    1    3    0    2    1    2    3    5     3     3     2     4
+##  [5,]    2    3    3    2    0    1    2    1    3     4     1     2     2
+##  [6,]    1    2    2    1    1    0    1    2    4     3     2     1     3
+##  [7,]    2    2    1    2    2    1    0    1    5     2     3     2     4
+##  [8,]    3    3    2    3    1    2    1    0    4     3     2     3     3
+##  [9,]    5    6    6    5    3    4    5    4    0     7     2     5     1
+## [10,]    4    2    3    3    4    3    2    3    7     0     5     4     6
+## [11,]    3    4    4    3    1    2    3    2    2     5     0     3     1
+## [12,]    2    3    3    2    2    1    2    3    5     4     3     0     4
+## [13,]    4    5    5    4    2    3    4    3    1     6     1     4     0
+## [14,]    3    1    2    2    3    2    1    2    6     1     4     3     5
+## [15,]    3    4    4    3    1    2    3    2    4     5     2     3     3
 ##       [,14] [,15]
-##  [1,]     2     3
-##  [2,]     5     6
-##  [3,]     6     7
-##  [4,]     4     5
-##  [5,]     1     2
-##  [6,]     4     5
-##  [7,]     5     6
-##  [8,]     2     1
-##  [9,]     3     4
-## [10,]     3     4
-## [11,]     3     4
-## [12,]     4     5
-## [13,]     4     5
-## [14,]     0     3
-## [15,]     3     0
+##  [1,]     3     3
+##  [2,]     1     4
+##  [3,]     2     4
+##  [4,]     2     3
+##  [5,]     3     1
+##  [6,]     2     2
+##  [7,]     1     3
+##  [8,]     2     2
+##  [9,]     6     4
+## [10,]     1     5
+## [11,]     4     2
+## [12,]     3     3
+## [13,]     5     3
+## [14,]     0     4
+## [15,]     4     0
 </code></pre>
 
   </article>
@@ -1187,9 +1187,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.57984025 0.17072205 0.05358685 0.74778656 0.20189347 0.70324181
-##  [7] 0.18614821 0.06337105 0.50114946 1.00000000 0.31118664 0.84984926
-## [13] 0.59304853 0.05811947 0.01824275
+<pre><code>##  [1] 0.28958290 0.47150321 0.27756515 0.42612217 0.53095503 1.00000000
+##  [7] 0.95849977 0.43132064 0.02274078 0.17405276 0.24844036 0.28958290
+## [13] 0.07852942 0.60104638 0.15375550
 </code></pre>
 
   </article>
