--- a/cours5/index.html
+++ b/cours5/index.html
@@ -946,7 +946,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 19
+<pre><code>## [1] 24
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1122,7 +1122,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.4279779
+<pre><code>## [1] 0.2682292
 </code></pre>
 
   </article>
@@ -1140,37 +1140,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    3    2    2    1    2    3    5     4     3     2     4
-##  [2,]    3    0    3    1    3    2    2    3    6     2     4     3     5
-##  [3,]    3    3    0    3    3    2    1    2    6     3     4     3     5
-##  [4,]    2    1    3    0    2    1    2    3    5     3     3     2     4
-##  [5,]    2    3    3    2    0    1    2    1    3     4     1     2     2
-##  [6,]    1    2    2    1    1    0    1    2    4     3     2     1     3
-##  [7,]    2    2    1    2    2    1    0    1    5     2     3     2     4
-##  [8,]    3    3    2    3    1    2    1    0    4     3     2     3     3
-##  [9,]    5    6    6    5    3    4    5    4    0     7     2     5     1
-## [10,]    4    2    3    3    4    3    2    3    7     0     5     4     6
-## [11,]    3    4    4    3    1    2    3    2    2     5     0     3     1
-## [12,]    2    3    3    2    2    1    2    3    5     4     3     0     4
-## [13,]    4    5    5    4    2    3    4    3    1     6     1     4     0
-## [14,]    3    1    2    2    3    2    1    2    6     1     4     3     5
-## [15,]    3    4    4    3    1    2    3    2    4     5     2     3     3
+##  [1,]    0    3    3    1    1    2    2    2    2     1     4     3     1
+##  [2,]    3    0    2    4    3    1    2    3    2     4     3     3     2
+##  [3,]    3    2    0    2    2    1    1    1    2     3     3     2     2
+##  [4,]    1    4    2    0    2    3    3    1    3     2     5     4     2
+##  [5,]    1    3    2    2    0    2    1    3    2     2     4     2     1
+##  [6,]    2    1    1    3    2    0    1    2    1     3     2     2     1
+##  [7,]    2    2    1    3    1    1    0    2    2     2     3     1     2
+##  [8,]    2    3    1    1    3    2    2    0    3     3     4     3     3
+##  [9,]    2    2    2    3    2    1    2    3    0     3     3     3     1
+## [10,]    1    4    3    2    2    3    2    3    3     0     3     2     2
+## [11,]    4    3    3    5    4    2    3    4    3     3     0     3     3
+## [12,]    3    3    2    4    2    2    1    3    3     2     3     0     2
+## [13,]    1    2    2    2    1    1    2    3    1     2     3     2     0
+## [14,]    3    2    2    4    3    1    2    3    2     2     1     2     2
+## [15,]    2    3    2    3    2    2    1    3    2     1     2     1     1
 ##       [,14] [,15]
-##  [1,]     3     3
-##  [2,]     1     4
-##  [3,]     2     4
-##  [4,]     2     3
-##  [5,]     3     1
-##  [6,]     2     2
-##  [7,]     1     3
-##  [8,]     2     2
-##  [9,]     6     4
-## [10,]     1     5
-## [11,]     4     2
-## [12,]     3     3
-## [13,]     5     3
-## [14,]     0     4
-## [15,]     4     0
+##  [1,]     3     2
+##  [2,]     2     3
+##  [3,]     2     2
+##  [4,]     4     3
+##  [5,]     3     2
+##  [6,]     1     2
+##  [7,]     2     1
+##  [8,]     3     3
+##  [9,]     2     2
+## [10,]     2     1
+## [11,]     1     2
+## [12,]     2     1
+## [13,]     2     1
+## [14,]     0     1
+## [15,]     1     0
 </code></pre>
 
   </article>
@@ -1187,9 +1187,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.28958290 0.47150321 0.27756515 0.42612217 0.53095503 1.00000000
-##  [7] 0.95849977 0.43132064 0.02274078 0.17405276 0.24844036 0.28958290
-## [13] 0.07852942 0.60104638 0.15375550
+<pre><code>##  [1] 0.5856160 0.2634575 0.5899119 0.2317126 0.6546506 1.0000000 0.9452254
+##  [8] 0.2938908 0.5147964 0.3824451 0.1391809 0.4771869 0.9540021 0.5282859
+## [15] 0.8660230
 </code></pre>
 
   </article>
