--- a/cours4/index.html
+++ b/cours4/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 23
+<pre><code>## [1] 24
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.294896
+<pre><code>## [1] 0.3185764
 </code></pre>
 
   </article>
@@ -1134,37 +1134,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    3    4    2    3    2    3    2    4     1     3     3     2
-##  [2,]    3    0    2    3    1    2    1    1    2     2     3     1     3
-##  [3,]    4    2    0    3    1    2    2    3    1     4     2     3     3
-##  [4,]    2    3    3    0    2    1    3    2    3     1     2     2     2
-##  [5,]    3    1    1    2    0    1    2    2    2     3     2     2     4
-##  [6,]    2    2    2    1    1    0    2    1    2     2     1     1     3
-##  [7,]    3    1    2    3    2    2    0    1    1     2     2     2     3
-##  [8,]    2    1    3    2    2    1    1    0    2     1     2     2     2
-##  [9,]    4    2    1    3    2    2    1    2    0     3     1     3     2
-## [10,]    1    2    4    1    3    2    2    1    3     0     3     3     1
-## [11,]    3    3    2    2    2    1    2    2    1     3     0     2     3
-## [12,]    3    1    3    2    2    1    2    2    3     3     2     0     4
-## [13,]    2    3    3    2    4    3    3    2    2     1     3     4     0
-## [14,]    1    3    3    2    2    1    3    2    3     2     2     2     3
-## [15,]    3    3    2    3    3    3    2    3    1     2     2     4     1
+##  [1,]    0    2    3    5    2    2    6    3    1     4     4     3   Inf
+##  [2,]    2    0    1    4    2    2    5    2    3     3     3     3   Inf
+##  [3,]    3    1    0    3    2    1    4    1    2     2     2     2   Inf
+##  [4,]    5    4    3    0    3    3    1    2    4     3     1     4   Inf
+##  [5,]    2    2    2    3    0    1    4    2    1     2     2     1   Inf
+##  [6,]    2    2    1    3    1    0    4    1    1     3     2     1   Inf
+##  [7,]    6    5    4    1    4    4    0    3    5     4     2     5   Inf
+##  [8,]    3    2    1    2    2    1    3    0    2     2     1     2   Inf
+##  [9,]    1    3    2    4    1    1    5    2    0     3     3     2   Inf
+## [10,]    4    3    2    3    2    3    4    2    3     0     2     3   Inf
+## [11,]    4    3    2    1    2    2    2    1    3     2     0     3   Inf
+## [12,]    3    3    2    4    1    1    5    2    2     3     3     0   Inf
+## [13,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf     0
+## [14,]    3    2    1    2    1    2    3    1    2     1     1     2   Inf
+## [15,]    1    1    2    4    1    2    5    3    2     3     3     2   Inf
 ##       [,14] [,15]
-##  [1,]     1     3
-##  [2,]     3     3
-##  [3,]     3     2
-##  [4,]     2     3
-##  [5,]     2     3
-##  [6,]     1     3
-##  [7,]     3     2
-##  [8,]     2     3
-##  [9,]     3     1
-## [10,]     2     2
-## [11,]     2     2
-## [12,]     2     4
-## [13,]     3     1
-## [14,]     0     4
-## [15,]     4     0
+##  [1,]     3     1
+##  [2,]     2     1
+##  [3,]     1     2
+##  [4,]     2     4
+##  [5,]     1     1
+##  [6,]     2     2
+##  [7,]     3     5
+##  [8,]     1     3
+##  [9,]     2     2
+## [10,]     1     3
+## [11,]     1     3
+## [12,]     2     2
+## [13,]   Inf   Inf
+## [14,]     0     2
+## [15,]     2     0
 </code></pre>
 
   </article>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 0.2648057 0.8242119 0.4315626 0.4486441 0.6559471 1.0000000 0.7435119
-##  [8] 0.9045159 0.8281784 0.5428682 0.5316083 0.5304549 0.2489352 0.3677875
-## [15] 0.3132093
+<pre><code>##  [1] 3.168292e-01 2.685678e-01 8.228835e-01 7.731386e-02 8.908362e-01
+##  [6] 1.000000e+00 1.784452e-02 6.444654e-01 7.151534e-01 1.505374e-01
+## [11] 3.171285e-01 4.364167e-01 1.613968e-17 6.522240e-01 3.407238e-01
 </code></pre>
 
   </article>
