--- a/cours4/index.html
+++ b/cours4/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 20
+<pre><code>## [1] 23
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.37375
+<pre><code>## [1] 0.4272211
 </code></pre>
 
   </article>
@@ -1134,37 +1134,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    1    2    2    3    2  Inf    2    1     3     1     3     2
-##  [2,]    1    0    1    3    4    3  Inf    1    2     3     2     3     2
-##  [3,]    2    1    0    4    3    4  Inf    2    3     2     1     2     1
-##  [4,]    2    3    4    0    2    1  Inf    4    1     5     3     3     4
-##  [5,]    3    4    3    2    0    1  Inf    4    2     3     3     1     2
-##  [6,]    2    3    4    1    1    0  Inf    4    1     4     3     2     3
-##  [7,]  Inf  Inf  Inf  Inf  Inf  Inf    0  Inf  Inf   Inf   Inf   Inf   Inf
-##  [8,]    2    1    2    4    4    4  Inf    0    3     3     1     3     2
-##  [9,]    1    2    3    1    2    1  Inf    3    0     4     2     3     3
-## [10,]    3    3    2    5    3    4  Inf    3    4     0     2     2     1
-## [11,]    1    2    1    3    3    3  Inf    1    2     2     0     2     1
-## [12,]    3    3    2    3    1    2  Inf    3    3     2     2     0     1
-## [13,]    2    2    1    4    2    3  Inf    2    3     1     1     1     0
-## [14,]    4    4    3    6    4    5  Inf    4    5     1     3     3     2
-## [15,]    3    2    3    5    5    5  Inf    1    4     4     2     4     3
+##  [1,]    0    3    4    3    1    3    2    1    3     2     2     2     4
+##  [2,]    3    0    1    3    2    4    3    2    2     3     3     1     2
+##  [3,]    4    1    0    2    3    5    3    3    3     4     4     2     1
+##  [4,]    3    3    2    0    2    6    1    4    4     5     5     3     1
+##  [5,]    1    2    3    2    0    4    1    2    2     3     3     1     3
+##  [6,]    3    4    5    6    4    0    5    2    5     1     2     3     6
+##  [7,]    2    3    3    1    1    5    0    3    3     4     4     2     2
+##  [8,]    1    2    3    4    2    2    3    0    3     1     1     1     4
+##  [9,]    3    2    3    4    2    5    3    3    0     4     4     2     4
+## [10,]    2    3    4    5    3    1    4    1    4     0     1     2     5
+## [11,]    2    3    4    5    3    2    4    1    4     1     0     2     5
+## [12,]    2    1    2    3    1    3    2    1    2     2     2     0     3
+## [13,]    4    2    1    1    3    6    2    4    4     5     5     3     0
+## [14,]    2    1    2    3    1    4    2    2    1     3     3     1     3
+## [15,]  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf  Inf   Inf   Inf   Inf   Inf
 ##       [,14] [,15]
-##  [1,]     4     3
-##  [2,]     4     2
-##  [3,]     3     3
-##  [4,]     6     5
-##  [5,]     4     5
-##  [6,]     5     5
-##  [7,]   Inf   Inf
-##  [8,]     4     1
-##  [9,]     5     4
-## [10,]     1     4
-## [11,]     3     2
-## [12,]     3     4
-## [13,]     2     3
-## [14,]     0     5
-## [15,]     5     0
+##  [1,]     2   Inf
+##  [2,]     1   Inf
+##  [3,]     2   Inf
+##  [4,]     3   Inf
+##  [5,]     1   Inf
+##  [6,]     4   Inf
+##  [7,]     2   Inf
+##  [8,]     2   Inf
+##  [9,]     1   Inf
+## [10,]     3   Inf
+## [11,]     3   Inf
+## [12,]     1   Inf
+## [13,]     3   Inf
+## [14,]     0   Inf
+## [15,]   Inf     0
 </code></pre>
 
   </article>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 5.056913e-01 5.450128e-01 9.196598e-01 1.432319e-01 1.015019e-01
-##  [6] 1.339541e-01 1.000003e-17 4.810195e-01 2.238170e-01 2.091607e-01
-## [11] 1.000000e+00 2.210837e-01 6.718148e-01 5.979702e-02 1.375188e-01
+<pre><code>##  [1] 0.4174352 0.6673954 0.2038653 0.1295290 0.8762737 0.1023368 0.2604547
+##  [8] 0.7357433 0.1828285 0.3951958 0.2928590 1.0000000 0.1198750 0.7060322
+## [15] 0.0000000
 </code></pre>
 
   </article>
