--- a/cours2/index.html
+++ b/cours2/index.html
@@ -1884,7 +1884,7 @@ dbDisconnect(con)
 <slide class="" id="slide-75" style="background:;">
   <!--  <a href="#slide-75"></a> -->
   <hgroup>
-    <h1>Lectures et travail pour la semaine prochiane</h1>
+    <h1>Lectures et travail pour la semaine prochaine</h1>
   </hgroup>
   <article data-timings="">
     <h2>Travail</h2>
@@ -2360,7 +2360,7 @@ dbDisconnect(con)
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=75 title='Lectures et travail pour la semaine prochiane'>
+        data-slide=75 title='Lectures et travail pour la semaine prochaine'>
          75
       </a>
     </li>
