--- a/cours4/index.html
+++ b/cours4/index.html
@@ -940,7 +940,7 @@ L[runif(S*S) &lt; C] = 1
 sum(L)
 </code></pre>
 
-<pre><code>## [1] 24
+<pre><code>## [1] 25
 </code></pre>
 
 <pre><code class="r">g &lt;- graph.adjacency(L)
@@ -1116,7 +1116,7 @@ plot(g, vertex.label=NA, edge.arrow.mode = 0,
 modularity(wtc)
 </code></pre>
 
-<pre><code>## [1] 0.3394097
+<pre><code>## [1] 0.3288
 </code></pre>
 
   </article>
@@ -1134,37 +1134,37 @@ modularity(wtc)
 </code></pre>
 
 <pre><code>##       [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9] [,10] [,11] [,12] [,13]
-##  [1,]    0    2    1    3    2    1    3    1    1     3     1     2     3
-##  [2,]    2    0    2    2    4    1    3    1    3     1     2     2     3
-##  [3,]    1    2    0    3    3    1    3    1    2     3     1     2     4
-##  [4,]    3    2    3    0    4    3    4    3    3     3     2     3     3
-##  [5,]    2    4    3    4    0    3    3    3    1     3     3     2     3
-##  [6,]    1    1    1    3    3    0    4    2    2     2     2     3     4
-##  [7,]    3    3    3    4    3    4    0    4    2     2     2     1     4
-##  [8,]    1    1    1    3    3    2    4    0    2     2     2     3     4
-##  [9,]    1    3    2    3    1    2    2    2    0     2     2     1     2
-## [10,]    3    1    3    3    3    2    2    2    2     0     2     1     4
-## [11,]    1    2    1    2    3    2    2    2    2     2     0     1     3
-## [12,]    2    2    2    3    2    3    1    3    1     1     1     0     3
-## [13,]    3    3    4    3    3    4    4    4    2     4     3     3     0
-## [14,]    2    1    2    1    3    2    3    2    2     2     1     2     2
-## [15,]    2    2    3    2    2    3    3    3    1     3     2     2     1
+##  [1,]    0    1    3    3    3    3    4    2    2     4     2     1     3
+##  [2,]    1    0    2    2    2    2    3    1    1     3     2     1     2
+##  [3,]    3    2    0    2    2    2    1    3    1     3     3     3     4
+##  [4,]    3    2    2    0    1    1    1    1    2     2     2     3     2
+##  [5,]    3    2    2    1    0    2    2    1    1     3     1     2     2
+##  [6,]    3    2    2    1    2    0    2    2    1     1     3     3     2
+##  [7,]    4    3    1    1    2    2    0    2    2     3     3     4     3
+##  [8,]    2    1    3    1    1    2    2    0    2     3     2     2     1
+##  [9,]    2    1    1    2    1    1    2    2    0     2     2     2     3
+## [10,]    4    3    3    2    3    1    3    3    2     0     4     4     3
+## [11,]    2    2    3    2    1    3    3    2    2     4     0     1     3
+## [12,]    1    1    3    3    2    3    4    2    2     4     1     0     3
+## [13,]    3    2    4    2    2    2    3    1    3     3     3     3     0
+## [14,]    4    3    1    3    3    3    2    4    2     4     4     4     5
+## [15,]    4    3    3    2    3    1    3    2    2     2     4     4     1
 ##       [,14] [,15]
-##  [1,]     2     2
-##  [2,]     1     2
-##  [3,]     2     3
-##  [4,]     1     2
-##  [5,]     3     2
-##  [6,]     2     3
-##  [7,]     3     3
-##  [8,]     2     3
-##  [9,]     2     1
-## [10,]     2     3
-## [11,]     1     2
-## [12,]     2     2
-## [13,]     2     1
-## [14,]     0     1
-## [15,]     1     0
+##  [1,]     4     4
+##  [2,]     3     3
+##  [3,]     1     3
+##  [4,]     3     2
+##  [5,]     3     3
+##  [6,]     3     1
+##  [7,]     2     3
+##  [8,]     4     2
+##  [9,]     2     2
+## [10,]     4     2
+## [11,]     4     4
+## [12,]     4     4
+## [13,]     5     1
+## [14,]     0     4
+## [15,]     4     0
 </code></pre>
 
   </article>
@@ -1181,9 +1181,9 @@ modularity(wtc)
 <pre><code class="r">eigen_centrality(g)$vector
 </code></pre>
 
-<pre><code>##  [1] 1.00000000 0.59342282 0.85161090 0.12284530 0.18730708 0.64125841
-##  [7] 0.12812321 0.86923156 0.71417717 0.28376007 0.73659005 0.48851690
-## [13] 0.08735214 0.46839291 0.33306220
+<pre><code>##  [1] 0.2087881 0.5149404 0.2737433 0.9976867 1.0000000 0.6228287 0.3344247
+##  [8] 0.8357938 0.6343011 0.2222926 0.3363736 0.2788391 0.6649289 0.0720028
+## [15] 0.5136159
 </code></pre>
 
   </article>
